fix(simple-form): gaps

--- a/src/app/pages/form/simple-form/simple-form.component.scss
+++ b/src/app/pages/form/simple-form/simple-form.component.scss
@@ -1,4 +1,9 @@
 .form {
+  .input-dropdown-section * {
+    margin-bottom: 16px;
+    display: block;
+  }
+
   tds-block {
     transition: filter 250ms ease;
   }
